--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
       <img src="profile1.jpg" alt="Profile" class="w-44 h-44 object-cover rounded-full mx-auto mb-6" />
       <h2 class="text-[#e27d60] text-2xl font-semibold border-b-2 border-[#f4d9c6] inline-block pb-2 mb-6">About Me</h2>
       <p class="mb-4">
-        I am an undergraduate student majoring in Nursing at Seoul National University. With a strong interest in integrating digital technology with human-centered healthcare, my goal is to bridge clinical insight and data-driven innovation to create meaningful tools that improve people’s lives. I’m still learning, but I approach every new challenge with curiosity, humility, and a deep sense of responsibility.
+        I am an undergraduate student majoring in Nursing at Seoul National University.
+      </p>
+      <p>
+        With a strong interest in integrating digital technology with human-centered healthcare, my goal is to bridge clinical insight and data-driven innovation to create meaningful tools that improve people’s lives. I’m still learning, but I approach every new challenge with curiosity, humility, and a deep sense of responsibility.
       </p>
       <p>
         In my free time, I love exploring cozy bookstores, enjoying musicals and art exhibitions, and reading everything from insightful non-fiction to comforting novels. I also cherish spending time with loved ones—whether it's taking peaceful walks with coffee in hand, sharing good food, talking with the people I care about, simply gazing at the sea to clear my mind, or capturing little joys in life, like witty signs or clever quotes that make me smile :) 📚🎶🌳🌼☕🍰💬🌊📸💛
@@ -49,24 +52,27 @@
     <!-- Education -->
     <section id="education" class="bg-white p-10 rounded-xl shadow-md max-w-3xl mx-auto my-8 text-center">
       <h2 class="text-[#e27d60] text-2xl font-semibold border-b-2 border-[#f4d9c6] inline-block pb-2 mb-6">Education</h2>
-      <p><strong>Seoul National University</strong><br />B.S. degree expected in Nursing (2019–present)</p>
+      <p><strong>Seoul National University</strong><br />B.S. degree expected in Nursing (2019 – present)</p>
     </section>
 
     <!-- Experiences -->
     <section id="experiences" class="bg-white p-10 rounded-xl shadow-md max-w-3xl mx-auto my-8 text-center">
       <h2 class="text-[#e27d60] text-2xl font-semibold border-b-2 border-[#f4d9c6] inline-block pb-2 mb-6">Experiences</h2>
       <div class="text-left space-y-6">
-        <div>
-          <p class="font-semibold">Undergraduate Research Intern <span class="text-sm text-gray-600">Jun 2025 – Present</span></p>
+        <div class="flex justify-between items-center">
+          <p class="font-semibold">Undergraduate Research Intern</p>
+          <span class="text-sm text-gray-600">Jun 2025 – Present</span>
           <p>• Human-Centered Artificial Intelligence Lab (HCAIL), SNU<br />• Supervisor: <strong><em>Prof. Hyunggu Jung</em></strong></p>
         </div>
         <div>
-          <p class="font-semibold">Undergraduate Research Intern <span class="text-sm text-gray-600">Jan 2025 – Jun 2025</span></p>
-          <p>• Medical AI Imaging Lab, SNU<br />• Supervisor: <strong><em>Prof. Namjoon Kim</em></strong></p>
+          <p class="font-semibold">Undergraduate Research Intern</p>
+          <span class="text-sm text-gray-600">Jan 2025 – Jun 2025</span>
+          <p>• Medical AI Imaging Lab, SNU<br />• Supervisor: <em>Prof. Namjoon Kim</em></p>
         </div>
         <div>
-          <p class="font-semibold">Undergraduate Research Intern <span class="text-sm text-gray-600">Sep 2024 – Dec 2024</span></p>
-          <p>• Developmental Cognitive Neuroscience Lab, SNU<br />• Supervisor: <strong><em>Prof. Sangah Lee</em></strong></p>
+          <p class="font-semibold">Undergraduate Research Intern</p>
+          <span class="text-sm text-gray-600">Sep 2024 – Dec 2024</span>
+          <p>• Developmental Cognitive Neuroscience Lab, SNU<br />• Supervisor: <em>Prof. Sangah Lee</em></p>
         </div>
       </div>
     </section>
@@ -74,21 +80,21 @@
     <!-- Projects -->
     <section id="projects" class="bg-white p-10 rounded-xl shadow-md max-w-5xl mx-auto my-8 text-center">
       <h2 class="text-[#e27d60] text-2xl font-semibold border-b-2 border-[#f4d9c6] inline-block pb-2 mb-6">Projects</h2>
-      <div class="grid gap-6 md:grid-cols-2">
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
         <div class="border rounded-lg p-6 shadow-sm bg-[#fffefc] text-left">
           <h3 class="font-semibold text-lg mb-2">SeNseU: A Mental Health Self-Assessment Platform</h3>
           <p class="text-sm text-gray-500 mb-2">Mar 2025 – Jun 2025</p>
-          <p>Developed a Python-based screening platform using PHQ-9, PSQI-K, AUDIT-K; proposed UX/UI improvements.</p>
+          <p>Developed a Python-based screening platform for mental health, sleep quality, and alcohol use in university students using three validated tools; proposed UX/UI improvements.</p>
         </div>
         <div class="border rounded-lg p-6 shadow-sm bg-[#fffefc] text-left">
           <h3 class="font-semibold text-lg mb-2">CEUS-based Liver Tumor Classification</h3>
           <p class="text-sm text-gray-500 mb-2">Jan 2025 – Jun 2025</p>
-          <p>Conducted deep learning experiments using CEUS data; analyzed padding and classification strategies.</p>
+          <p>Assisted with deep learning experiments using CEUS data; analyzed padding strategies for liver tumor classification and performed statistical analysis.</p>
         </div>
         <div class="border rounded-lg p-6 shadow-sm bg-[#fffefc] text-left">
           <h3 class="font-semibold text-lg mb-2">Language Development and Episodic Memory</h3>
           <p class="text-sm text-gray-500 mb-2">Sep 2024 – Dec 2024</p>
-          <p>Led an NLP-based memory study; awarded Best Poster at SNU BMB Conference.</p>
+          <p>Led a study on language and memory in children; received Best Poster Award at the SNU BMB Conference.</p>
         </div>
       </div>
     </section>
@@ -97,8 +103,8 @@
     <section id="resume" class="bg-white p-10 rounded-xl shadow-md max-w-3xl mx-auto my-8 text-center">
       <h2 class="text-[#e27d60] text-2xl font-semibold border-b-2 border-[#f4d9c6] inline-block pb-2 mb-6">Resume</h2>
       <p class="mb-4">Download my CV here:</p>
-      <a href="Chaeyoung_Lee_CV_EN.pdf" target="_blank" class="inline-block px-4 py-2 bg-[#1e3d59] text-white rounded hover:bg-[#163045]">📄 English CV</a>
-      <a href="Chaeyoung_Lee_CV_KR.pdf" target="_blank" class="inline-block px-4 py-2 bg-[#1e3d59] text-white rounded hover:bg-[#163045] ml-4">📄 한글 이력서</a>
+      <a href="ChaeyoungLee_Resume_EN.pdf" target="_blank" class="inline-block px-4 py-2 bg-[#1e3d59] text-white rounded hover:bg-[#163045]">📄 English CV</a>
+      <a href="ChaeyoungLee_Resume_KR.pdf" target="_blank" class="inline-block px-4 py-2 bg-[#1e3d59] text-white rounded hover:bg-[#163045] ml-4">📄 한글 이력서</a>
     </section>
 
     <!-- Contact -->
