Edit forms index.html

--- a/index.html
+++ b/index.html
@@ -41,12 +41,15 @@
       <p class="mb-4">
         I am an undergraduate student majoring in Nursing at Seoul National University.
       </p>
-      <p>
-        With a strong interest in integrating digital technology with human-centered healthcare, my goal is to bridge clinical insight and data-driven innovation to create meaningful tools that improve people’s lives. I’m still learning, but I approach every new challenge with curiosity, humility, and a deep sense of responsibility.
+      <p class="mb-4">
+        With a strong interest in integrating digital technology with human-centered healthcare,
       </p>
-      <p>
-        In my free time, I love exploring cozy bookstores, enjoying musicals and art exhibitions, and reading everything from insightful non-fiction to comforting novels. I also cherish spending time with loved ones—whether it's taking peaceful walks with coffee in hand, sharing good food, talking with the people I care about, simply gazing at the sea to clear my mind, or capturing little joys in life, like witty signs or clever quotes that make me smile :) 📚🎶🌳🌼☕🍰💬🌊📸💛
+      <p>my goal is to bridge clinical insight and data-driven innovation to create meaningful tools that improve people’s lives. I’m still learning, but I approach every new challenge with curiosity, humility, and a deep sense of responsibility.</p>
+      <p class="mb-4">
+        In my free time, I love exploring cozy bookstores, enjoying musicals and art exhibitions, and reading everything from insightful non-fiction to comforting novels. I also cherish spending time with loved ones—whether it's taking peaceful walks with coffee in hand, sharing good food, talking with the people I care about, simply gazing at the sea to clear my mind,
       </p>
+      <p>or capturing little joys in life, like witty signs or clever quotes that make me smile :)</p>
+      <p>📚🎶🌳🌼☕🍰💬🌊📸💛</p>
     </section>
 
     <!-- Education -->
@@ -59,19 +62,19 @@
     <section id="experiences" class="bg-white p-10 rounded-xl shadow-md max-w-3xl mx-auto my-8 text-center">
       <h2 class="text-[#e27d60] text-2xl font-semibold border-b-2 border-[#f4d9c6] inline-block pb-2 mb-6">Experiences</h2>
       <div class="text-left space-y-6">
-        <div class="flex justify-between items-center">
+        <div>
           <p class="font-semibold">Undergraduate Research Intern</p>
-          <span class="text-sm text-gray-600">Jun 2025 – Present</span>
+          <p class="text-sm text-gray-500 mb-2">Jun 2025 – Present</p>
           <p>• Human-Centered Artificial Intelligence Lab (HCAIL), SNU<br />• Supervisor: <strong><em>Prof. Hyunggu Jung</em></strong></p>
         </div>
         <div>
           <p class="font-semibold">Undergraduate Research Intern</p>
-          <span class="text-sm text-gray-600">Jan 2025 – Jun 2025</span>
+          <p class="text-sm text-gray-500 mb-2">Jan 2025 – Jun 2025</p>
           <p>• Medical AI Imaging Lab, SNU<br />• Supervisor: <em>Prof. Namjoon Kim</em></p>
         </div>
         <div>
           <p class="font-semibold">Undergraduate Research Intern</p>
-          <span class="text-sm text-gray-600">Sep 2024 – Dec 2024</span>
+          <p class="text-sm text-gray-500 mb-2">Sep 2024 – Dec 2024</p>
           <p>• Developmental Cognitive Neuroscience Lab, SNU<br />• Supervisor: <em>Prof. Sangah Lee</em></p>
         </div>
       </div>
@@ -102,9 +105,9 @@
     <!-- Resume -->
     <section id="resume" class="bg-white p-10 rounded-xl shadow-md max-w-3xl mx-auto my-8 text-center">
       <h2 class="text-[#e27d60] text-2xl font-semibold border-b-2 border-[#f4d9c6] inline-block pb-2 mb-6">Resume</h2>
-      <p class="mb-4">Download my CV here:</p>
-      <a href="ChaeyoungLee_Resume_EN.pdf" target="_blank" class="inline-block px-4 py-2 bg-[#1e3d59] text-white rounded hover:bg-[#163045]">📄 English CV</a>
-      <a href="ChaeyoungLee_Resume_KR.pdf" target="_blank" class="inline-block px-4 py-2 bg-[#1e3d59] text-white rounded hover:bg-[#163045] ml-4">📄 한글 이력서</a>
+      <p class="mb-4">You can download or view my full Resume here:</p>
+      <a href="ChaeyoungLee_Resume_en.pdf" target="_blank" class="inline-block px-4 py-2 bg-[#1e3d59] text-white rounded hover:bg-[#163045]">📄 English CV</a>
+      <a href="ChaeyoungLee_Resume_kr.pdf" target="_blank" class="inline-block px-4 py-2 bg-[#1e3d59] text-white rounded hover:bg-[#163045] ml-4">📄 한글 이력서</a>
     </section>
 
     <!-- Contact -->
