Edit width(projects) index.html

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <div class="border rounded-lg p-6 shadow-sm bg-[#fffefc] text-left">
           <h3 class="font-semibold text-lg mb-2">Language Development and Episodic Memory</h3>
           <p class="text-sm text-gray-500 mb-2">Sep 2024 – Dec 2024</p>
-          <p>Led a study on language and memory in children; received Best Poster Award at the SNU BMB Conference.</p>
+          <p>Led a study on language and memory in children; transcribed free recall data and applied NLP and cosine similarity. Received Best Poster Award at the SNU BMB Conference.</p>
         </div>
       </div>
     </section>
