--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -42,20 +42,16 @@
         I am an undergraduate student majoring in Nursing at Seoul National University.
       </p>
       <p class="mb-4">
-        With a strong interest in integrating digital technology with human-centered healthcare,
-      </p>
-      <p>my goal is to bridge clinical insight and data-driven innovation to create meaningful tools that improve people’s lives. I’m still learning, but I approach every new challenge with curiosity, humility, and a deep sense of responsibility.</p>
+        With a strong interest in integrating digital technology with human-centered healthcare,<br />my goal is to bridge clinical insight and data-driven innovation to create meaningful tools that improve people’s lives.<br />I’m still learning, but I approach every new challenge with curiosity, humility, and a deep sense of responsibility.</p>
       <p class="mb-4">
-        In my free time, I love exploring cozy bookstores, enjoying musicals and art exhibitions, and reading everything from insightful non-fiction to comforting novels. I also cherish spending time with loved ones—whether it's taking peaceful walks with coffee in hand, sharing good food, talking with the people I care about, simply gazing at the sea to clear my mind,
-      </p>
-      <p>or capturing little joys in life, like witty signs or clever quotes that make me smile :)</p>
+        In my free time, I love exploring cozy bookstores, enjoying musicals and art exhibitions, and reading everything from insightful non-fiction to comforting novels.<br />I also cherish spending time with loved ones—whether it's taking peaceful walks with coffee in hand, sharing good food, talking with the people I care about, simply gazing at the sea to clear my mind, or capturing little joys in life, like witty signs or clever quotes that make me smile :)</p>
       <p>📚🎶🌳🌼☕🍰💬🌊📸💛</p>
     </section>
 
     <!-- Education -->
     <section id="education" class="bg-white p-10 rounded-xl shadow-md max-w-3xl mx-auto my-8 text-center">
       <h2 class="text-[#e27d60] text-2xl font-semibold border-b-2 border-[#f4d9c6] inline-block pb-2 mb-6">Education</h2>
-      <p><strong>Seoul National University</strong><br />B.S. degree expected in Nursing (2019 – present)</p>
+      <p class="font-semibold">Seoul National University<br />B.S. degree expected in Nursing (2019 – present)</p>
     </section>
 
     <!-- Experiences -->
@@ -63,41 +59,53 @@
       <h2 class="text-[#e27d60] text-2xl font-semibold border-b-2 border-[#f4d9c6] inline-block pb-2 mb-6">Experiences</h2>
       <div class="text-left space-y-6">
         <div>
-          <p class="font-semibold">Undergraduate Research Intern</p>
-          <p class="text-sm text-gray-500 mb-2">Jun 2025 – Present</p>
-          <p>• Human-Centered Artificial Intelligence Lab (HCAIL), SNU<br />• Supervisor: <strong><em>Prof. Hyunggu Jung</em></strong></p>
+          <div className="flex justify-between items-start">
+            <p class="font-semibold">Undergraduate Research Intern</p>
+            <p class="text-sm text-gray-500">Jun 2025 – Present</p>
+          </div>
+          <p>• Human-Centered Artificial Intelligence Lab (HCAIL), SNU<br />• Supervisor: <em class="font-semibold">Prof. Hyunggu Jung</em></p>
         </div>
         <div>
-          <p class="font-semibold">Undergraduate Research Intern</p>
-          <p class="text-sm text-gray-500 mb-2">Jan 2025 – Jun 2025</p>
-          <p>• Medical AI Imaging Lab, SNU<br />• Supervisor: <em>Prof. Namjoon Kim</em></p>
+          <div className="flex justify-between items-start">
+            <p class="font-semibold">Undergraduate Research Intern</p>
+            <p class="text-sm text-gray-500 mb-2">Jan 2025 – Jun 2025</p>
+          </div>
+          <p>• Medical AI Imaging Lab, SNU<br />• Supervisor: Prof. Namjoon Kim</p>
         </div>
         <div>
-          <p class="font-semibold">Undergraduate Research Intern</p>
-          <p class="text-sm text-gray-500 mb-2">Sep 2024 – Dec 2024</p>
-          <p>• Developmental Cognitive Neuroscience Lab, SNU<br />• Supervisor: <em>Prof. Sangah Lee</em></p>
+          <div className="flex justify-between items-start">
+            <p class="font-semibold">Undergraduate Research Intern</p>
+            <p class="text-sm text-gray-500 mb-2">Sep 2024 – Dec 2024</p>
+          </div>
+          <p>• Developmental Cognitive Neuroscience Lab, SNU<br />• Supervisor: Prof. Sangah Lee</p>
         </div>
       </div>
     </section>
 
     <!-- Projects -->
-    <section id="projects" class="bg-white p-10 rounded-xl shadow-md max-w-3xl mx-auto my-8 text-center">
+    <section id="projects" class="bg-white p-10 rounded-xl shadow-md max-w-5xl mx-auto my-8 text-center">
       <h2 class="text-[#e27d60] text-2xl font-semibold border-b-2 border-[#f4d9c6] inline-block pb-2 mb-6">Projects</h2>
-      <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-        <div class="border rounded-lg p-6 shadow-sm bg-[#fffefc] text-left">
-          <h3 class="font-semibold text-lg mb-2">SeNseU: A Mental Health Self-Assessment Platform</h3>
-          <p class="text-sm text-gray-500 mb-2">Mar 2025 – Jun 2025</p>
-          <p>Developed a Python-based screening platform for mental health, sleep quality, and alcohol use in university students using three validated tools; proposed UX/UI improvements.</p>
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-6 text-left">
+        <div class="border rounded-lg p-6 shadow-sm bg-[#fffefc] flex flex-col gap-2">
+          <div class="flex justify-between items-start">
+            <h3 class="font-semibold text-lg">SeNseU: A Mental Health Self-Assessment Platform</h3>
+            <p class="text-sm text-gray-500">Mar 2025 – Jun 2025</p>
+          </div>
+          <p>Developed a Python-based screening platform using PHQ-9, PSQI-K, AUDIT-K; proposed UX/UI improvements as part of a term project.</p>
         </div>
-        <div class="border rounded-lg p-6 shadow-sm bg-[#fffefc] text-left">
-          <h3 class="font-semibold text-lg mb-2">CEUS-based Liver Tumor Classification</h3>
-          <p class="text-sm text-gray-500 mb-2">Jan 2025 – Jun 2025</p>
-          <p>Assisted with deep learning experiments using CEUS data; analyzed padding strategies for liver tumor classification and performed statistical analysis.</p>
+        <div class="border rounded-lg p-6 shadow-sm bg-[#fffefc] flex flex-col gap-2">
+          <div class="flex justify-between items-start">
+            <h3 class="font-semibold text-lg">CEUS-based Liver Tumor Classification</h3>
+            <p class="text-sm text-gray-500">Jan 2025 – Jun 2025</p>
+          </div>
+          <p>Conducted deep learning experiments using CEUS data; analyzed padding strategies and classification accuracy.</p>
         </div>
-        <div class="border rounded-lg p-6 shadow-sm bg-[#fffefc] text-left">
-          <h3 class="font-semibold text-lg mb-2">Language Development and Episodic Memory</h3>
-          <p class="text-sm text-gray-500 mb-2">Sep 2024 – Dec 2024</p>
-          <p>Led a study on language and memory in children; transcribed free recall data and applied NLP and cosine similarity. Received Best Poster Award at the SNU BMB Conference.</p>
+        <div class="border rounded-lg p-6 shadow-sm bg-[#fffefc] flex flex-col gap-2">
+          <div class="flex justify-between items-start">
+            <h3 class="font-semibold text-lg">Language Development and Episodic Memory</h3>
+            <p class="text-sm text-gray-500">Sep 2024 – Dec 2024</p>
+          </div>
+          <p>Led an NLP-based study on memory and language development in children; awarded Best Poster at the SNU BMB Conference.</p>
         </div>
       </div>
     </section>
