--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <li><a href="#about" class="hover:underline hover:text-[#e27d60]">About</a></li>
         <li><a href="#education" class="hover:underline hover:text-[#e27d60]">Education</a></li>
         <li><a href="#experiences" class="hover:underline hover:text-[#e27d60]">Experiences</a></li>
-        <li><a href="#projects" class="hover:underline hover:text-[#e27d60]">Projects</a></li>
+        <!--<li><a href="#projects" class="hover:underline hover:text-[#e27d60]">Projects</a></li>-->
         <li><a href="#resume" class="hover:underline hover:text-[#e27d60]">Resume</a></li>
         <li><a href="#contact" class="hover:underline hover:text-[#e27d60]">Contact</a></li>
       </ul>
@@ -83,7 +83,7 @@
     </section>
 
     <!-- Projects -->
-    <section id="projects" class="bg-white p-10 rounded-xl shadow-md max-w-5xl mx-auto my-8 text-center">
+    <!--<section id="projects" class="bg-white p-10 rounded-xl shadow-md max-w-5xl mx-auto my-8 text-center">
       <h2 class="text-[#e27d60] text-2xl font-semibold border-b-2 border-[#f4d9c6] inline-block pb-2 mb-6">Projects</h2>
       <div class="grid grid-cols-1 md:grid-cols-2 gap-6 text-left">
         <div class="border rounded-lg p-6 shadow-sm bg-[#fffefc] flex flex-col gap-2">
@@ -108,14 +108,14 @@
           <p>Led an NLP-based study on memory and language development in children; awarded Best Poster at the SNU BMB Conference.</p>
         </div>
       </div>
-    </section>
+    </section>-->
 
     <!-- Resume -->
     <section id="resume" class="bg-white p-10 rounded-xl shadow-md max-w-3xl mx-auto my-8 text-center">
       <h2 class="text-[#e27d60] text-2xl font-semibold border-b-2 border-[#f4d9c6] inline-block pb-2 mb-6">Resume</h2>
       <p class="mb-4">You can download or view my full Resume here:</p>
-      <a href="ChaeyoungLee_Resume_en.pdf" target="_blank" class="inline-block px-4 py-2 bg-[#1e3d59] text-white rounded hover:bg-[#163045]">📄 English CV</a>
       <a href="ChaeyoungLee_Resume_kr.pdf" target="_blank" class="inline-block px-4 py-2 bg-[#1e3d59] text-white rounded hover:bg-[#163045] ml-4">📄 한글 이력서</a>
+      <a href="ChaeyoungLee_Resume_en.pdf" target="_blank" class="inline-block px-4 py-2 bg-[#1e3d59] text-white rounded hover:bg-[#163045]">📄 English CV</a>
     </section>
 
     <!-- Contact -->
