--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
     <!-- Education -->
     <section id="education" class="bg-white p-10 rounded-xl shadow-md max-w-3xl mx-auto my-8 text-center">
       <h2 class="text-[#e27d60] text-2xl font-semibold border-b-2 border-[#f4d9c6] inline-block pb-2 mb-6">Education</h2>
-      <p class="font-semibold">Seoul National University<br />B.S. degree expected in Nursing (2019 – present)</p>
+      <p class="font-semibold">Seoul National University</p>
+      <p>B.S. degree expected in Nursing (2019 – present)</p>
     </section>
 
     <!-- Experiences -->
@@ -59,21 +60,21 @@
       <h2 class="text-[#e27d60] text-2xl font-semibold border-b-2 border-[#f4d9c6] inline-block pb-2 mb-6">Experiences</h2>
       <div class="text-left space-y-6">
         <div>
-          <div className="flex justify-between items-start">
+          <div class="flex justify-between items-start">
             <p class="font-semibold">Undergraduate Research Intern</p>
             <p class="text-sm text-gray-500">Jun 2025 – Present</p>
           </div>
           <p>• Human-Centered Artificial Intelligence Lab (HCAIL), SNU<br />• Supervisor: <em class="font-semibold">Prof. Hyunggu Jung</em></p>
         </div>
         <div>
-          <div className="flex justify-between items-start">
+          <div class="flex justify-between items-start">
             <p class="font-semibold">Undergraduate Research Intern</p>
             <p class="text-sm text-gray-500 mb-2">Jan 2025 – Jun 2025</p>
           </div>
           <p>• Medical AI Imaging Lab, SNU<br />• Supervisor: Prof. Namjoon Kim</p>
         </div>
         <div>
-          <div className="flex justify-between items-start">
+          <div class="flex justify-between items-start">
             <p class="font-semibold">Undergraduate Research Intern</p>
             <p class="text-sm text-gray-500 mb-2">Sep 2024 – Dec 2024</p>
           </div>
@@ -113,9 +114,9 @@
     <!-- Resume -->
     <section id="resume" class="bg-white p-10 rounded-xl shadow-md max-w-3xl mx-auto my-8 text-center">
       <h2 class="text-[#e27d60] text-2xl font-semibold border-b-2 border-[#f4d9c6] inline-block pb-2 mb-6">Resume</h2>
-      <p class="mb-4">You can download or view my full Resume here:</p>
+      <p class="mb-4">You can download or view my full Resume here :)</p>
       <a href="ChaeyoungLee_Resume_kr.pdf" target="_blank" class="inline-block px-4 py-2 bg-[#1e3d59] text-white rounded hover:bg-[#163045] ml-4">📄 한글 이력서</a>
-      <a href="ChaeyoungLee_Resume_en.pdf" target="_blank" class="inline-block px-4 py-2 bg-[#1e3d59] text-white rounded hover:bg-[#163045]">📄 English CV</a>
+      <a href="ChaeyoungLee_Resume_en.pdf" target="_blank" class="inline-block px-4 py-2 bg-[#1e3d59] text-white rounded hover:bg-[#163045]">📄 English Resume</a>
     </section>
 
     <!-- Contact -->
