--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
         I am an undergraduate student majoring in Nursing at Seoul National University.
       </p>
       <p class="mb-4">
-        With a strong interest in integrating digital technology with human-centered healthcare,<br />my goal is to bridge clinical insight and data-driven innovation to create meaningful tools that improve people’s lives.<br />I’m still learning, but I approach every new challenge with curiosity, humility, and a deep sense of responsibility.</p>
+        With a strong interest in integrating digital technology with human-centered healthcare,<br />my goal is to bridge clinical insight and data-driven innovation to create meaningful tools that improve people’s lives. I’m still learning, but I approach every new challenge with curiosity, humility, and a deep sense of responsibility.</p>
       <p class="mb-4">
-        In my free time, I love exploring cozy bookstores, enjoying musicals and art exhibitions, and reading everything from insightful non-fiction to comforting novels.<br />I also cherish spending time with loved ones—whether it's taking peaceful walks with coffee in hand, sharing good food, talking with the people I care about, simply gazing at the sea to clear my mind, or capturing little joys in life, like witty signs or clever quotes that make me smile :)</p>
+        In my free time, I love exploring cozy bookstores, enjoying musicals and art exhibitions,<br />and reading everything from insightful non-fiction to comforting novels.<br />I also cherish spending time with loved ones—whether it's taking peaceful walks with coffee in hand, sharing good food, talking with the people I care about, simply gazing at the sea to clear my mind, or capturing little joys in life, like witty signs or clever quotes that make me smile :)</p>
       <p>📚🎶🌳🌼☕🍰💬🌊📸💛</p>
     </section>
 
@@ -115,7 +115,7 @@
     <section id="resume" class="bg-white p-10 rounded-xl shadow-md max-w-3xl mx-auto my-8 text-center">
       <h2 class="text-[#e27d60] text-2xl font-semibold border-b-2 border-[#f4d9c6] inline-block pb-2 mb-6">Resume</h2>
       <p class="mb-4">You can download or view my full Resume here :)</p>
-      <a href="ChaeyoungLee_Resume_kr.pdf" target="_blank" class="inline-block px-4 py-2 bg-[#1e3d59] text-white rounded hover:bg-[#163045] ml-4">📄 한글 이력서</a>
+      <!--<a href="ChaeyoungLee_Resume_kr.pdf" target="_blank" class="inline-block px-4 py-2 bg-[#1e3d59] text-white rounded hover:bg-[#163045] ml-4">📄 한글 이력서</a>-->
       <a href="ChaeyoungLee_Resume_en.pdf" target="_blank" class="inline-block px-4 py-2 bg-[#1e3d59] text-white rounded hover:bg-[#163045]">📄 English Resume</a>
     </section>
 
