Edit resume index.html

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       <h2 class="text-[#e27d60] text-2xl font-semibold border-b-2 border-[#f4d9c6] inline-block pb-2 mb-6">Resume</h2>
       <p class="mb-4">You can download or view my full Resume here :)</p>
       <!--<a href="ChaeyoungLee_Resume_kr.pdf" target="_blank" class="inline-block px-4 py-2 bg-[#1e3d59] text-white rounded hover:bg-[#163045] ml-4">📄 한글 이력서</a>-->
-      <a href="ChaeyoungLee_Resume_en.pdf" target="_blank" class="inline-block px-4 py-2 bg-[#1e3d59] text-white rounded hover:bg-[#163045]">📄 English Resume</a>
+      <a href="ChaeyoungLee_Resume_en.pdf" target="_blank" class="inline-block px-4 py-2 bg-[#1e3d59] text-white rounded hover:bg-[#163045]">📄 Resume</a>
     </section>
 
     <!-- Contact -->
