--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       <h2 class="text-[#e27d60] text-2xl font-semibold border-b-2 border-[#f4d9c6] inline-block pb-2 mb-6">Resume</h2>
       <p class="mb-4">You can download or view my full Resume here :)</p>
       <!--<a href="ChaeyoungLee_Resume_kr.pdf" target="_blank" class="inline-block px-4 py-2 bg-[#1e3d59] text-white rounded hover:bg-[#163045] ml-4">📄 한글 이력서</a>-->
-      <a href="ChaeyoungLee_Resume_en.pdf" target="_blank" class="inline-block px-4 py-2 bg-[#1e3d59] text-white rounded hover:bg-[#163045]">📄 Resume</a>
+      <a href="Resume_ChaeyoungLee_en.pdf" target="_blank" class="inline-block px-4 py-2 bg-[#1e3d59] text-white rounded hover:bg-[#163045]">📄 Resume</a>
     </section>
 
     <!-- Contact -->
@@ -126,9 +126,10 @@
       <p>📧 <strong>SNU Email</strong>: <a href="mailto:leecy0130@snu.ac.kr" class="text-blue-600 hover:text-blue-800">leecy0130@snu.ac.kr</a></p>
       <p>📧 <strong>Personal Email</strong>: <a href="mailto:cchaeyyoung@gmail.com" class="text-blue-600 hover:text-blue-800">cchaeyyoung@gmail.com</a></p>
       <p>💻 <strong>GitHub</strong>: <a href="https://github.com/its-chaeyounglee" class="text-blue-600 hover:text-blue-800">its-chaeyounglee</a></p>
-      <div class="text-2xl mt-4 space-x-4">
+      <p>🔗 <strong>LinkedIn</strong>: <a href="https://linkedin.com/in/its-chaeyounglee" class="text-blue-600 hover:text-blue-800">linkedin.com/in/yourusername</a></p>      <div class="text-2xl mt-4 space-x-4">
         <a href="mailto:leecy0130@snu.ac.kr"><i class="fas fa-envelope"></i></a>
         <a href="https://github.com/its-chaeyounglee"><i class="fab fa-github"></i></a>
+        <a href="https://linkedin.com/in/its-chaeyounglee"><i class="fab fa-linkedin text-[#0077B5]"></i></a>
       </div>
     </section>
 
