Edit github&linkedin index.html

--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
       <p class="mb-4">You’re welcome to reach out for collaboration, questions, or just to say hello!</p>
       <p>📧 <strong>SNU Email</strong>: <a href="mailto:leecy0130@snu.ac.kr" class="text-blue-600 hover:text-blue-800">leecy0130@snu.ac.kr</a></p>
       <p>📧 <strong>Personal Email</strong>: <a href="mailto:cchaeyyoung@gmail.com" class="text-blue-600 hover:text-blue-800">cchaeyyoung@gmail.com</a></p>
-      <p>💻 <strong>GitHub</strong>: <a href="https://github.com/its-chaeyounglee" class="text-blue-600 hover:text-blue-800">its-chaeyounglee</a></p>
-      <p>🔗 <strong>LinkedIn</strong>: <a href="https://linkedin.com/in/its-chaeyounglee" class="text-blue-600 hover:text-blue-800">linkedin.com/in/yourusername</a></p>      <div class="text-2xl mt-4 space-x-4">
+      <p>💻 <strong>GitHub</strong>: <a href="https://github.com/its-chaeyounglee" class="text-blue-600 hover:text-blue-800">github.com/its-chaeyounglee</a></p>
+      <p>🔗 <strong>LinkedIn</strong>: <a href="https://linkedin.com/in/its-chaeyounglee" class="text-blue-600 hover:text-blue-800">linkedin.com/in/its-chaeyounglee</a></p>      <div class="text-2xl mt-4 space-x-4">
         <a href="mailto:leecy0130@snu.ac.kr"><i class="fas fa-envelope"></i></a>
         <a href="https://github.com/its-chaeyounglee"><i class="fab fa-github"></i></a>
         <a href="https://linkedin.com/in/its-chaeyounglee"><i class="fab fa-linkedin text-[#0077B5]"></i></a>
