--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <img src="profile1.jpg" alt="Profile" class="w-44 h-44 object-cover rounded-full mx-auto mb-6" />
       <h2 class="text-[#e27d60] text-2xl font-semibold border-b-2 border-[#f4d9c6] inline-block pb-2 mb-6">About Me</h2>
       <p class="mb-4">
-        I am an undergraduate student majoring in Nursing at Seoul National University.
+        I am an undergraduate student majoring in Nursing at <a href="https://en.snu.ac.kr" class="text-blue-600 hover:underline" target="_blank">Seoul National University</a>.
       </p>
       <p class="mb-4">
         With a strong interest in integrating digital technology with human-centered healthcare,<br />my goal is to bridge clinical insight and data-driven innovation to create meaningful tools that improve people’s lives. I’m still learning, but I approach every new challenge with curiosity, humility, and a deep sense of responsibility.</p>
@@ -64,7 +64,7 @@
             <p class="font-semibold">Undergraduate Research Intern</p>
             <p class="text-sm text-gray-500">Jun 2025 – Present</p>
           </div>
-          <p>• Human-Centered Artificial Intelligence Lab (HCAIL), SNU<br />• Supervisor: <em class="font-semibold">Prof. Hyunggu Jung</em></p>
+          <p>• <a href="https://hcail.snu.ac.kr/" class="text-blue-600 hover:underline" target="_blank">Human-Centered Artificial Intelligence Lab (HCAIL)</a>, SNU<br />• Supervisor: <em class="font-semibold">Prof. Hyunggu Jung</em></p>
         </div>
         <div>
           <div class="flex justify-between items-start">
