--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <!-- Header -->
     <header class="text-center py-16 px-4">
-      <h1 class="text-3xl font-bold text-[#1e3d59]">Hello 🖐, I am Chaeyoung Lee 😊</h1>
+      <h1 class="text-3xl font-bold text-[#1e3d59]">Hi! 👋, This is Chaeyoung Lee 😊</h1>
       <p class="mt-4">Welcome to my website!</p>
     </header>
 
@@ -39,7 +39,7 @@
       <img src="profile1.jpg" alt="Profile" class="w-44 h-44 object-cover rounded-full mx-auto mb-6" />
       <h2 class="text-[#e27d60] text-2xl font-semibold border-b-2 border-[#f4d9c6] inline-block pb-2 mb-6">About Me</h2>
       <p class="mb-4">
-        I am an undergraduate student majoring in Nursing at <a href="https://en.snu.ac.kr" class="text-blue-600 hover:underline" target="_blank">Seoul National University</a>.
+        I am an undergraduate student at <a href="https://en.snu.ac.kr" class="text-blue-600 hover:underline" target="_blank">Seoul National University</a>, majoring in Nursing with a minor in Brain-Mind-Behavior.
       </p>
       <p class="mb-4">
         With a strong interest in integrating digital technology with human-centered healthcare,<br />my goal is to bridge clinical insight and data-driven innovation to create meaningful tools that improve people’s lives. I’m still learning, but I approach every new challenge with curiosity, humility, and a deep sense of responsibility.</p>
@@ -52,7 +52,7 @@
     <section id="education" class="bg-white p-10 rounded-xl shadow-md max-w-3xl mx-auto my-8 text-center">
       <h2 class="text-[#e27d60] text-2xl font-semibold border-b-2 border-[#f4d9c6] inline-block pb-2 mb-6">Education</h2>
       <p class="font-semibold">Seoul National University</p>
-      <p>B.S. degree expected in Nursing (2019 – present)</p>
+      <p>B.S. degree expected in <a href="https://nursing.snu.ac.kr/en" class="text-blue-600 hover:underline" target="_blank">Nursing</a> & <a href="https://bmb.psych.snu.ac.kr/e_main.php" class="text-blue-600 hover:underline" target="_blank">Brain-Mind-Behavior</a> (2019 – present)</p>
     </section>
 
     <!-- Experiences -->
@@ -64,21 +64,21 @@
             <p class="font-semibold">Undergraduate Research Intern</p>
             <p class="text-sm text-gray-500">Jun 2025 – Present</p>
           </div>
-          <p>• <a href="https://hcail.snu.ac.kr/" class="text-blue-600 hover:underline" target="_blank">Human-Centered Artificial Intelligence Lab (HCAIL)</a>, SNU<br />• Supervisor: <em class="font-semibold">Prof. Hyunggu Jung</em></p>
+          <p>• <a href="https://hcail.snu.ac.kr/" class="text-blue-600 hover:underline" target="_blank">Human-Centered Artificial Intelligence Lab (HCAIL)</a>, SNU<br />• Advisor: Prof. Hyunggu Jung</p>
         </div>
         <div>
           <div class="flex justify-between items-start">
             <p class="font-semibold">Undergraduate Research Intern</p>
             <p class="text-sm text-gray-500 mb-2">Jan 2025 – Jun 2025</p>
           </div>
-          <p>• Medical AI Imaging Lab, SNU<br />• Supervisor: Prof. Namjoon Kim</p>
+          <p>• Medical AI Imaging Lab, SNU<br />• Advisor: Prof. Namjoon Kim</p>
         </div>
         <div>
           <div class="flex justify-between items-start">
             <p class="font-semibold">Undergraduate Research Intern</p>
             <p class="text-sm text-gray-500 mb-2">Sep 2024 – Dec 2024</p>
           </div>
-          <p>• Developmental Cognitive Neuroscience Lab, SNU<br />• Supervisor: Prof. Sangah Lee</p>
+          <p>• Developmental Cognitive Neuroscience Lab, SNU<br />• Advisor: Prof. Sangah Lee</p>
         </div>
       </div>
     </section>
