--- a/index.html
+++ b/index.html
@@ -39,9 +39,7 @@
       <img src="profile1.jpg" alt="Profile" class="w-44 h-44 object-cover rounded-full mx-auto mb-6" />
       <h2 class="text-[#e27d60] text-2xl font-semibold border-b-2 border-[#f4d9c6] inline-block pb-2 mb-6">About Me</h2>
       <p class="mb-4">
-        I am an undergraduate student at <a href="https://en.snu.ac.kr" class="text-blue-600 hover:underline" target="_blank">Seoul National University</a>,      </p>
-      <p class="mb-4">
-        majoring in Nursing with a minor in Brain-Mind-Behavior.
+        I am an undergraduate student at <a href="https://en.snu.ac.kr" class="text-blue-600 hover:underline" target="_blank">Seoul National University</a>,</p> majoring in Nursing with a minor in Brain-Mind-Behavior.
       </p>
       <p class="mb-4">
         With a strong interest in integrating digital technology with human-centered healthcare,<br />my goal is to bridge clinical insight and data-driven innovation to create meaningful tools that improve people’s lives. I’m still learning, but I approach every new challenge with curiosity, humility, and a deep sense of responsibility.</p>
