--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <img src="profile1.jpg" alt="Profile" class="w-44 h-44 object-cover rounded-full mx-auto mb-6" />
       <h2 class="text-[#e27d60] text-2xl font-semibold border-b-2 border-[#f4d9c6] inline-block pb-2 mb-6">About Me</h2>
       <p class="mb-4">
-        I am an undergraduate student at <a href="https://en.snu.ac.kr" class="text-blue-600 hover:underline" target="_blank">Seoul National University</a>,</p> majoring in Nursing with a minor in Brain-Mind-Behavior.
+        I am an undergraduate student at <a href="https://en.snu.ac.kr" class="text-blue-600 hover:underline" target="_blank">Seoul National University</a>, majoring in Nursing with a minor in Brain-Mind-Behavior.
       </p>
       <p class="mb-4">
         With a strong interest in integrating digital technology with human-centered healthcare,<br />my goal is to bridge clinical insight and data-driven innovation to create meaningful tools that improve people’s lives. I’m still learning, but I approach every new challenge with curiosity, humility, and a deep sense of responsibility.</p>
@@ -116,7 +116,7 @@
       <h2 class="text-[#e27d60] text-2xl font-semibold border-b-2 border-[#f4d9c6] inline-block pb-2 mb-6">Resume</h2>
       <p class="mb-4">You can download or view my full Resume here :)</p>
       <!--<a href="ChaeyoungLee_Resume_kr.pdf" target="_blank" class="inline-block px-4 py-2 bg-[#1e3d59] text-white rounded hover:bg-[#163045] ml-4">📄 한글 이력서</a>-->
-      <a href="Resume_ChaeyoungLee_en.pdf" target="_blank" class="inline-block px-4 py-2 bg-[#1e3d59] text-white rounded hover:bg-[#163045]">📄 Resume</a>
+      <a href="Chaeyoung_Lee_Resume.pdf" target="_blank" class="inline-block px-4 py-2 bg-[#1e3d59] text-white rounded hover:bg-[#163045]">📄 Resume</a>
     </section>
 
     <!-- Contact -->
