--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <img src="profile1.jpg" alt="Profile" class="w-44 h-44 object-cover rounded-full mx-auto mb-6" />
       <h2 class="text-[#e27d60] text-2xl font-semibold border-b-2 border-[#f4d9c6] inline-block pb-2 mb-6">About Me</h2>
       <p class="mb-4">
-        I am an undergraduate student at <a href="https://en.snu.ac.kr" class="text-blue-600 hover:underline" target="_blank">Seoul National University</a>, majoring in Nursing with a minor in Brain-Mind-Behavior.
+        I am an undergraduate student at <a href="https://en.snu.ac.kr" class="text-blue-600 hover:underline" target="_blank">Seoul National University</a>,<br />majoring in Nursing with a minor in Brain-Mind-Behavior.
       </p>
       <p class="mb-4">
         With a strong interest in integrating digital technology with human-centered healthcare,<br />my goal is to bridge clinical insight and data-driven innovation to create meaningful tools that improve people’s lives. I’m still learning, but I approach every new challenge with curiosity, humility, and a deep sense of responsibility.</p>
@@ -55,7 +55,7 @@
       <p>B.S. degree expected in <a href="https://nursing.snu.ac.kr/en" class="text-blue-600 hover:underline" target="_blank">Nursing</a> & <a href="https://bmb.psych.snu.ac.kr/e_main.php" class="text-blue-600 hover:underline" target="_blank">Brain-Mind-Behavior</a> (2019 – present)</p>
     </section>
 
-    <!-- Experiences -->
+    <!-- Experience -->
     <section id="experiences" class="bg-white p-10 rounded-xl shadow-md max-w-3xl mx-auto my-8 text-center">
       <h2 class="text-[#e27d60] text-2xl font-semibold border-b-2 border-[#f4d9c6] inline-block pb-2 mb-6">Experiences</h2>
       <div class="text-left space-y-6">
@@ -125,8 +125,8 @@
       <p class="mb-4">You’re welcome to reach out for collaboration, questions, or just to say hello!</p>
       <p>📧 <strong>SNU Email</strong>: <a href="mailto:leecy0130@snu.ac.kr" class="text-blue-600 hover:text-blue-800">leecy0130@snu.ac.kr</a></p>
       <p>📧 <strong>Personal Email</strong>: <a href="mailto:cchaeyyoung@gmail.com" class="text-blue-600 hover:text-blue-800">cchaeyyoung@gmail.com</a></p>
-      <p>💻 <strong>GitHub</strong>: <a href="https://github.com/its-chaeyounglee" class="text-blue-600 hover:text-blue-800">github.com/its-chaeyounglee</a></p>
       <p>🔗 <strong>LinkedIn</strong>: <a href="https://linkedin.com/in/its-chaeyounglee" class="text-blue-600 hover:text-blue-800">linkedin.com/in/its-chaeyounglee</a></p>      <div class="text-2xl mt-4 space-x-4">
+      <p>💻 <strong>GitHub</strong>: <a href="https://github.com/its-chaeyounglee" class="text-blue-600 hover:text-blue-800">github.com/its-chaeyounglee</a></p>
         <a href="mailto:leecy0130@snu.ac.kr"><i class="fas fa-envelope"></i></a>
         <a href="https://github.com/its-chaeyounglee"><i class="fab fa-github"></i></a>
         <a href="https://linkedin.com/in/its-chaeyounglee"><i class="fab fa-linkedin text-[#0077B5]"></i></a>
