--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
     </section>
 
     <!-- Experience -->
-    <section id="experiences" class="bg-white p-10 rounded-xl shadow-md max-w-3xl mx-auto my-8 text-center">
-      <h2 class="text-[#e27d60] text-2xl font-semibold border-b-2 border-[#f4d9c6] inline-block pb-2 mb-6">Experiences</h2>
+    <section id="experience" class="bg-white p-10 rounded-xl shadow-md max-w-3xl mx-auto my-8 text-center">
+      <h2 class="text-[#e27d60] text-2xl font-semibold border-b-2 border-[#f4d9c6] inline-block pb-2 mb-6">Experience</h2>
       <div class="text-left space-y-6">
         <div>
           <div class="flex justify-between items-start">
