--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <ul class="flex justify-center space-x-6 text-[#1e3d59] font-medium">
         <li><a href="#about" class="hover:underline hover:text-[#e27d60]">About</a></li>
         <li><a href="#education" class="hover:underline hover:text-[#e27d60]">Education</a></li>
-        <li><a href="#experiences" class="hover:underline hover:text-[#e27d60]">Experiences</a></li>
+        <li><a href="#experience" class="hover:underline hover:text-[#e27d60]">Experience</a></li>
         <!--<li><a href="#projects" class="hover:underline hover:text-[#e27d60]">Projects</a></li>-->
         <li><a href="#resume" class="hover:underline hover:text-[#e27d60]">Resume</a></li>
         <li><a href="#contact" class="hover:underline hover:text-[#e27d60]">Contact</a></li>
@@ -30,7 +30,7 @@
 
     <!-- Header -->
     <header class="text-center py-16 px-4">
-      <h1 class="text-3xl font-bold text-[#1e3d59]">Hi! 👋, This is Chaeyoung Lee 😊</h1>
+      <h1 class="text-3xl font-bold text-[#1e3d59]">Hi! 👋 This is Chaeyoung Lee 😊</h1>
       <p class="mt-4">Welcome to my website!</p>
     </header>
 
@@ -113,8 +113,8 @@
 
     <!-- Resume -->
     <section id="resume" class="bg-white p-10 rounded-xl shadow-md max-w-3xl mx-auto my-8 text-center">
-      <h2 class="text-[#e27d60] text-2xl font-semibold border-b-2 border-[#f4d9c6] inline-block pb-2 mb-6">Resume</h2>
-      <p class="mb-4">You can download or view my full Resume here :)</p>
+      <h2 class="text-[#e27d60] text-2xl font-semibold border-b-2 border-[#f4d9c6] inline-block pb-2 mb-6">CV</h2>
+      <p class="mb-4">You can download or view my full CV here :)</p>
       <!--<a href="ChaeyoungLee_Resume_kr.pdf" target="_blank" class="inline-block px-4 py-2 bg-[#1e3d59] text-white rounded hover:bg-[#163045] ml-4">📄 한글 이력서</a>-->
       <a href="Chaeyoung_Lee_Resume.pdf" target="_blank" class="inline-block px-4 py-2 bg-[#1e3d59] text-white rounded hover:bg-[#163045]">📄 Resume</a>
     </section>
